force-app/main/default/objects/Invoice_Scheme_Applied__c/Invoice_Scheme_Applied__c.object-meta.xml
<CustomObject>
    <label>Invoice Scheme Applied</label>
    <nameField>
        <label>Invoice Item Scheme Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Scheme Applied</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>