force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Descritption__c.field-meta.xml
<CustomField>
    <fullName>Descritption__c</fullName>
    <label>Descritption</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>