force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/FOC_Giveaway_Product__c.field-meta.xml
<CustomField>
    <fullName>FOC_Giveaway_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FOC Giveaway Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Invoice Scheme Applied</relationshipLabel>
    <relationshipName>Invoice_Scheme_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>