force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Free_Qty__c.field-meta.xml
<CustomField>
    <fullName>Free_Qty__c</fullName>
    <label>Free_Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>