force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Scheme__c.field-meta.xml
<CustomField>
    <fullName>Scheme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme</label>
    <referenceTo>Scheme__c</referenceTo>
    <relationshipLabel>Invoice Scheme Applied</relationshipLabel>
    <relationshipName>Invoice_Scheme_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>