force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Scheme_Slab__c.field-meta.xml
<CustomField>
    <fullName>Scheme_Slab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheme Slab</label>
    <referenceTo>Scheme_Slab__c</referenceTo>
    <relationshipLabel>Invoice Scheme Applied</relationshipLabel>
    <relationshipName>Invoice_Scheme_Applied</relationshipName>
    <type>Lookup</type>
</CustomField>