force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Secondary_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice__c</fullName>
    <label>Secondary Invoice</label>
    <referenceTo>Secondary_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Scheme Applied</relationshipLabel>
    <relationshipName>Invoice_Item_Schemes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>