force-app/main/default/objects/Invoice_Scheme_Applied__c/fields/Secondary_Invoice_Item__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Invoice_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Invoice Item</label>
    <referenceTo>Secondary_Invoice_Item__c</referenceTo>
    <relationshipLabel>Invoice Scheme Applied</relationshipLabel>
    <relationshipName>Invoice_Item_Schemes</relationshipName>
    <type>Lookup</type>
</CustomField>